--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,8 +4,15 @@
 @custom-variant dark (&:is(.dark *));
 
 @font-face {
-  font-family: 'Sounce Serif';
-  src: url('/fonts/Sounce Serif.woff2') format('woff2');
+  font-family: 'Satoshi';
+  src: url('/fonts/Satoshi.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Instrument Serif';
+  src: url('/fonts/Instrument Serif.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
 }
@@ -27,9 +34,8 @@
   --color-input: hsl(0 0% 20%);
   --color-ring: #0464FE;
   
-  --font-sans: 'Sounce Serif', serif;
-  --font-heading: 'Sounce Serif', serif;
-  --font-serif: 'Sounce Serif', serif;
+  --font-sans: 'Satoshi', sans-serif;
+  --font-heading: 'Satoshi', sans-serif;
   
   --radius: 0.25rem; /* 4px */
 
